sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:20: error: ';' expected but identifier found.
  } while (echangefait==true) or (ecart>=1)
                              ^